--- a/login.html
+++ b/login.html
@@ -100,7 +100,7 @@
     <section class="container forms">
       <div class="form login">
         <div class="form-content">
-          <header>Login/Signup</header>
+          <header>Login/Signup to see the results</header>
           <form action="#">
             <p>Enter your email/mobile and we will send you a login code</p>
 
