--- a/quiz.html
+++ b/quiz.html
@@ -267,7 +267,7 @@
   
 
         <div id="submitbutton">
-          <a href="dashboard.html" class="knap-2">Få din sundhedsscore</a>
+          <a href="login.html" class="knap-2">Få din sundhedsscore</a>
         </div>
       </form>
     </div>
