--- a/dashboard.html
+++ b/dashboard.html
@@ -129,7 +129,7 @@
               src="animations/health-score.json"
               background="transparent"
               speed="1"
-              style="width: 185px; height: 185px"
+              style="width: 250px; height: 250px"
               autoplay
             ></lottie-player>
 
@@ -199,10 +199,11 @@
               </li>
             </ul>
           </div>
-
-          <!-- <div class="benefits-2">
+          <h2 class="h2-dashboard">Boost your health with</h2>
+<article class="grid">
+   <div class="benefits-2">
             <div class="product-2">
-              <h2>Improve your health with</h2>
+           
               <img src="assets/dvitamin.png" alt="product" />
               <h3>Magnesium</h3>
               <div class="see-results-button">
@@ -232,16 +233,17 @@
           </div>
         </div>
 
-        <a href="health-score.html" class="read-more-2">Want to know more? Read more about your test results here → </a>
+     
+    </div>
+  </article>
 
-    </div> -->
-
+    <a href="health-score.html" class="read-more-2">Want to know more? Read more about your test results here → </a>
 
     </article>
 
     <!------ Product slider ------>
     <section class="boost-health">
-      <h2 class="product-category">Boost your health with...</h2>
+      <h2 class="product-category">Other products you might like...</h2>
       <hr />
 
       <div class="product-slider">
